# rust

./: .gitignore  .gitmodules  CRITICAL_DISCOVERY.md  Cargo.toml  EXECUTIVE_SUMMARY.md  FINAL_HONEST_STATUS.md  FINAL_PROC_MACRO_SOLUTION.md  IMPLEMENTATION_STATUS.md  OPTION_2_STATUS.md  OPTION_A_STATUS.md  OPTION_B_ANALYSIS.md  OPTION_C_STANDARD_EXTERN.md  PHASE_2_COMPLETION_REPORT.md  PHASE_2_PROGRESS.md  PHASE_2_REGISTRATION_PLAN.md  PHASE_2_REGISTRATION_STATUS.md  PROC_MACRO_LOADING_ISSUE.md  PROC_MACRO_PATTERN_DISCOVERED.md  PROC_MACRO_WASM_OPTIONS.md  QUICK_STATUS.md  SESSION_SUMMARY.md  SOLUTION_A_IMPLEMENTATION.md  SOLUTION_A_INVESTIGATION.md  WASM_PROC_MACRO_COMPLETE_STATUS.md  WASM_PROC_MACRO_FINAL_ANALYSIS.md  WASM_PROC_MACRO_FINAL_STATUS.md  WASM_PROC_MACRO_FLAG_STATUS.md  WASM_PROC_MACRO_README.md  WASM_PROC_MACRO_STATUS.md  WASM_PROC_MACRO_STATUS_FINAL.md  WASM_PROC_MACRO_SUMMARY.md  WATT_INTEGRATION_ANALYSIS.md  build-wasm-compiler.sh  build-wasm-llvm-only.sh  build_wasm_compiler.sh  check_wasm_sections.py  config.llvm-wasm-only.toml  config.llvm.toml  config.wasm.toml  examine_proc_macro.rs  (+47 more)
compiler/rustc/: Cargo.toml
compiler/rustc_codegen_cranelift/: Cargo.toml
compiler/rustc_codegen_gcc/: Cargo.toml
compiler/rustc_macros/: Cargo.toml
compiler/rustc_watt_runtime/: Cargo.toml
compiler/rustc_watt_runtime/src/: ast.rs  binary.rs  data.rs  decode.rs  import.rs  interpret.rs  interpret.rs.bak  interpreter.rs  lib.rs  memory_ops.txt  runtime_lib.rs  valid.rs  valid_insert.txt
serde_wasm_derive/: Cargo.toml
tmp/: test_watt_demo.wasm
(+53 files in other folders)
